--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,27 +1,36 @@
 #home {
-    display: flex;
-    margin: auto;
-    width: 90vw;
-    height: auto;
-    justify-items: center;
-    padding-top: 6rem;
+    width: 100vw;
+    padding-top: 6.5rem;
     padding-bottom: 2rem;
+    background-image:radial-gradient(at top left,#3f465e 36%,#1e3686 67%, transparent 67.5%);
+    background-size:120% 100%;
+    background-repeat:no-repeat;
 }
 
 .home--container {
+    max-width: 90vw;
     display: flex;
-    gap: 60px;
-    align-items: center;
-    flex-wrap: nowrap;
+    gap: 30px;
+    justify-content: center;
+    margin: auto;
+}
+
+.left--div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+    color: #fff;
 }
 
 .left--div span {
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 400;
 }
 
 .left--div p {
-    max-width: 750px;
+    max-width: 850px;
     line-height: 2rem;
     padding-top: 12px;
     padding-bottom: 12px;
@@ -30,30 +39,58 @@
 }
 
 .button {
-    padding: 12px 30px;
+    padding: 12px 20px;
     border: none;
     border-radius: 10px;
-    background-color: rgb(16, 182, 243);
-    color: #fff;
+    background-color: #fff;
+    color: rgb(0, 0, 0);
     font-size: 16px;
 }
 
+.button:hover {
+    background-color: #c4c1c1;
+    transition: ease-in-out 1s;
+}
+
 .HomeImage img {
+    border-radius: 50%;
+}
+
+.my-image {
     width: 100%;
     height: auto;
 }
 
+.home--paragraph {
+    width: 100%;
+    font-size: 1.5rem;
+}
+
+
 .name {
-    color: rgb(16, 182, 243);
+    color: rgba(239, 207, 207, 0.863);
 }
 
 @media screen and (max-width: 768px) {
     .home--container {
         flex-wrap: wrap;
     }
+    .HomeImage img {
+        width: 100%;
+        height: auto;
+    }
+
+    .home--paragraph {
+        width: 100%;
+        font-size: 0.5rem;
+    }
 
     .home--container {
         gap: 30px
+    }
+
+    .left--div span {
+        font-size: 3rem;
     }
 
     .left--div p {
