--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   padding: 30px 40px;
   align-items: center;
-  background-color: rgb(16, 182, 243);
+  background-color: #0e1a41de;
   color: #fff;
   position: fixed;
   top: 0;
