--- a/src/Components/Portfolio/PopUp/Popup.css
+++ b/src/Components/Portfolio/PopUp/Popup.css
@@ -31,7 +31,11 @@
   border: none;
   cursor: pointer;
   font-size: 20px;
-  color: #666;
+  color: #fff;
+  background: #000;
+  padding: 5px 10px;
+  border-radius: 50%;
+
   z-index: 101; /* Ensure it's above the popup content */
 }
 
@@ -48,6 +52,7 @@
 .popup--heading {
   font-size: 24px;
   margin-bottom: 10px;
+  color: #000;
 }
 
 .popup--paragraph {
@@ -60,8 +65,11 @@
   display: inline-block;
   margin-top: 10px;
   text-decoration: none;
-  color: #007bff;
-  font-size: 16px;
+  color: #fff;
+  font-size: 24px;
+  background: #201e1e;
+  padding: 5px 28px;
+  border-radius: 10px;
 }
 
 .popup--image {
