--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -77,7 +77,7 @@
   .menu.open {
     display: flex;
     opacity: 1;
-    background: rgba(238, 242, 244, 0.71);
+    background: #0d173a69;
     opacity: 100;
     height: 100vh;
   }
@@ -88,7 +88,7 @@
     padding: 15px 70px 50rem 35px;
     gap: 30px;
     border-radius: 10px 0 0 0;
-    background: rgb(16, 182, 243);
+    background: #0d173aaf;
   }
 
   .menu li {
