--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -73,7 +73,7 @@
 
 @media screen and (max-width: 768px) {
     .home--container {
-        flex-wrap: wrap;
+        flex-wrap: wrap-reverse;
     }
     .HomeImage img {
         width: 100%;
