--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -42,8 +42,8 @@
     padding: 12px 20px;
     border: none;
     border-radius: 10px;
-    background-color: #fff;
-    color: rgb(0, 0, 0);
+    background-color: rgb(16, 182, 243);
+    color: #fff;
     font-size: 16px;
 }
 
