--- a/src/Components/Portfolio/PopUp/Popup.css
+++ b/src/Components/Portfolio/PopUp/Popup.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  background-color: rgba(0, 0, 0, 0.933); /* Semi-transparent black */
   z-index: 99; /* Increase z-index to ensure it's above the popup content */
   display: flex;
   justify-content: center;
@@ -15,12 +15,13 @@
   position: relative; /* Ensure that the cancel button respects the container */
   background-color: #f9f9f9; /* Custom background color */
   border: 1px solid #ccc;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgb(16, 182, 243);
   padding: 20px;
   max-width: 900px;
   width: 100%;
   overflow-y: auto; /* Enable scrolling within the popup */
   z-index: 100; /* Ensure it's above the backdrop */
+  border-radius: 20px;
 }
 
 .special-button-cancel {
@@ -91,5 +92,12 @@
 @media screen and (max-width: 768px) {
   .popup--main--container {
     flex-direction: column-reverse;
+  }
+
+  .popup__container {
+    max-width: 900px;
+    width: 96%;
+    height: 96%;
+
   }
 }
