Modify the service component for adequate styling

--- a/src/Components/Service/services.css
+++ b/src/Components/Service/services.css
@@ -1,28 +1,79 @@
-#service {
-  width: 100vw;
-  padding-top: 5rem;
-  padding-bottom: 2rem;
-}
-
-.main--service {
-  width: 90vw;
-  display: flex;
-  margin: auto;
-  gap: 30px;
-}
-
-.service-heading {
+.service--title {
   color: #fff;
+  background: #172551;
   text-align: center;
   margin-bottom: 3rem;
-  background: #172551;
-  font-size: 45px;
   padding: 1rem;
-  border-radius: 30px;
+  font-weight: 900;
+  font-size: 24px;
+  border-radius: 25px;
+}
+
+.map--container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.service-card {
+  margin: 1rem;
+  width: calc(45.45% - 2rem);
+  max-width: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.image--container {
+  position: relative;
+  overflow: hidden;
+}
+
+.service--content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: rgba(3, 9, 25, 0.85);
+  color: #fff;
+  padding: 15px;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.service-card:hover .service--content {
+  transform: translateY(0);
+  width: fit-content;
+  height: 100%;
+}
+
+.service--content h2 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.service--content p {
+  margin: 0;
+}
+
+.image--container img {
+  display: block;
+  width: fit-content;
+  height: 100%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.image--container:hover img {
+  transform: scale(1.05);
 }
 
 @media screen and (max-width: 768px) {
-  .main--service {
-    flex-direction: column;
+  .service--title {
+    margin-bottom: 1.5rem; /* Adjusted margin for smaller screens */
+  }
+
+  .service-card {
+    width: calc(100% - 2rem); /* Displaying cards in a single column */
+    margin: 1rem auto; /* Centering cards */
   }
 }
